--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
+  username: postgres
   password: <%= ENV['POSTGRESQL_ENV_POSTGRES_PASSWORD'] %>
   host: <%= ENV['POSTGRESQL_PORT_5432_TCP_ADDR'] %>
   port: <%= ENV['POSTGRESQL_PORT_5432_TCP_PORT'] %>
